# StudioArenaCLI

./: .gitignore  README.md  pyproject.toml
src/studio_arena/: budget.py  cli.py  client.py  harness.py  mcp_server.py
src/studio_arena/engine/: __init__.py  bounty.py  context.py  difficulty.py  domain.py  orchestrator.py  review.py  search.py
